# rust_oidc_vault

./: .env  Cargo.toml  docker-compose.yml
examples/: main.rs
migrations/: 01_base_schema.down.sql  01_base_schema.up.sql  02_idp_references.down.sql  02_idp_references.up.sql
setups/: init-multiple-dbs.sh
setups/keycloak/: realm.json
setups/terraform/: Dockerfile  entrypoint.sh  main.tf
src/: _database.rs  axum.rs  database.rs  errors.rs  ident.rs  idp.rs  lib.rs  main.rs  oidc.rs  test_utils.rs  vault.rs
src/axum/: error.rs  extractors.rs  handlers.rs  middleware.rs
src/database/: institutions.rs  mod.rs  teams.rs  users.rs
src/ident/: idp_admin.rs  keycloak.rs  tests.rs
src/idp/: admin.rs  ext.rs  keycloak.rs  mod.rs  tests.rs
src/oidc/: ext.rs  keycloak.rs  logout.rs  mod.rs  session.rs
src/tests/: auth.rs  error.rs  harness.rs  mod.rs  permission.rs
terraform/: Dockerfile  admins.tf  entrypoint.sh  institutions.tf  keycloak.tf  main.tf  teams.tf  users.tf  vault.tf
terraform/external_group/: main.tf  variables.tf
terraform/modules/admin/: main.tf  outputs.tf  variables.tf
terraform/modules/identity/: groups.tf  main.tf  mappers.tf  outputs.tf  roles.tf  variables.tf
terraform/modules/institution/: main.tf  outputs.tf  variables.tf  vault.tf
terraform/modules/team/: main.tf  output.tf  variables.tf  vault.tf
terraform/modules/users/: main.tf  outputs.tf  variables.tf
tests/: auth.rs  basic.rs  error.rs  harness.rs  headless.rs  permission.rs  service.rs
