[package]
name = "oidc_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
vaultrs = "0.7.3"
axum = { version = "0.8", features = [ "macros" ]}
axum-oidc = "0.6.0"
tower = "0.5"
tower-sessions = "0.14"

tower-http = { version = "0.6.2", features = ["auth", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }

dotenvy = "0.15"