[package]
name = "aicl_oidc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
vaultrs = "0.7.3"
axum = { version = "0.8", features = [ "macros" ]}
axum-oidc = "0.6.0"
tower = "0.5"
tower-sessions = "0.14"

tower-http = { version = "0.6.2", features = ["auth", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }

dotenvy = "0.15"
uuid = { version = "1.14.0", features = ["serde", "v4"] }
openidconnect = "3.5.0"
serde_json = "1.0.139"
reqwest = { version = "0.12.12", features = ["json"] }
moka = { version = "0.12.10", features = ["future"] }
thiserror = "2.0.11"
async-trait = "0.1.86"
atomic-time = "0.1.5"

[dev-dependencies]
tracing-test = "0.2.5"