[package]
name = "aicl_oidc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
vaultrs = "0.7.3"
axum = { version = "0.8", features = [ "macros" ]}
tower = "0.5"
tower-sessions = "0.14"

tower-http = { version = "0.6.2", features = ["auth", "trace", "fs", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }

dotenvy = "0.15"
uuid = { version = "1.14.0", features = ["serde", "v4"] }
openidconnect = "4.0.0"
serde_json = "1.0.139"
reqwest = { version = "0.12.12", features = ["json"] }
moka = { version = "0.12.10", features = ["future"] }
thiserror = "2.0.11"
async-trait = "0.1.86"
atomic-time = "0.1.5"
futures-util = "0.3.31"
anyhow = { version = "1.0.96", features = ["backtrace"] }
tower-sessions-moka-store = "0.15.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
url = "2.5.4"
headers = "0.4.0"

[dev-dependencies]
base64 = "0.22.1"
headless_chrome = "1.0.17"
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", features = ["cookies"] }
tracing-test = "0.2.5"

